name:                derive-serialize
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Code
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cereal
                     , containers
                     , IntervalMap
  default-language:    Haskell2010
